# fractal-tasks-utils

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/fractal_tasks_utils/: __init__.py
src/fractal_tasks_utils/measurement/: __init__.py  _compute.py
src/fractal_tasks_utils/segmentation/: __init__.py  _compute.py  _models.py  _transforms.py
src/fractal_tasks_utils/transforms/: __init__.py  _transforms.py
tests/: test_measurement.py  test_segmentation.py  test_transforms.py
